// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Process heading > code-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'next-mdx-import-source-file'
export const metadata = {
  title: 'codegen.yml'
}
function useTOC(props) {
  return []
}
export const toc = useTOC({})
function _createMdxContent(props) {
  const _components = {
    code: 'code',
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
    </_components.h1>
  )
}
export default _createMdxContent"
`;

exports[`Process heading > code-with-text-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'next-mdx-import-source-file'
export const metadata = {
  title: 'codegen.yml file'
}
function useTOC(props) {
  return []
}
export const toc = useTOC({})
function _createMdxContent(props) {
  const _components = {
    code: 'code',
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
      {' file'}
    </_components.h1>
  )
}
export default _createMdxContent"
`;

exports[`Process heading > dynamic-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'next-mdx-import-source-file'
export const metadata = {
  title: 'Posts Tagged with ""'
}
import { useRouter } from 'next/router'
export const TagName = () => {
  const { tag } = useRouter().query
  return tag || null
}
function useTOC(props) {
  return []
}
export const toc = useTOC({})
function _createMdxContent(props) {
  const _components = {
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return (
    <_components.h1>
      {'Posts Tagged with "'}
      <TagName />
      {'"'}
    </_components.h1>
  )
}
export default _createMdxContent"
`;

exports[`Process heading > no-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'next-mdx-import-source-file'
export const metadata = {}
function useTOC(props) {
  return [
    {
      value: 'H2',
      id: 'h2',
      depth: 2
    }
  ]
}
export const toc = useTOC({})
function _createMdxContent(props) {
  const _components = {
    h2: 'h2',
    ..._provideComponents(),
    ...props.components
  }
  return <_components.h2 id={toc[0].id}>{toc[0].value}</_components.h2>
}
export default _createMdxContent"
`;

exports[`Process heading > static-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'next-mdx-import-source-file'
export const metadata = {
  title: 'Hello World'
}
function useTOC(props) {
  return []
}
export const toc = useTOC({})
function _createMdxContent(props) {
  const _components = {
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return <_components.h1>{'Hello World'}</_components.h1>
}
export default _createMdxContent"
`;
